--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -14,7 +14,7 @@
         </li>
         <li>
           Категория: 
-          <a href="{% url 'blog:categoty_post' post.category %}">
+          <a href="{% url 'blog:category_posts' post.category %}">
             {{ post.category }}
           </a>
         </li>
