--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Лента записей{% endblock%}
-     
-    
 {% block content %}
   <div class="container py-5">
     <h1>Лента записей</h1>                        
     <!-- Перебираем в цикле все посты -->
-    {% for post in posts %}
+    {% for post in posts reversed %}
     {% if not forloop.last %}
     <hr>
     {% endif %}
@@ -20,7 +18,7 @@
         </li>
         <li>
           Категория: 
-          <a href="{% url 'blog:categoty_post' post.category %}">
+          <a href="{% url 'blog:category_posts' post.category %}">
             {{ post.category }}
           </a>
         </li>
