--- a/blogicum/templates/pages/rules.html
+++ b/blogicum/templates/pages/rules.html
@@ -1,18 +1,18 @@
-{% extends "base.html"  %}
-{% block title%}Наши правила{% endblock%}
- 
+{% extends "base.html" %}
+
+{% block title %}Наши правила{% endblock %}
 {% block content %}
-  <div class="container py-5">                        
+  <div class="container py-5">                   
     <h1>Наши правила</h1>
     <p>
-      <b>Cамовыражение.</b> У наших пользователей должна 
-      быть возможность создать что-то своё, выразить себя, 
+      <b>Cамовыражение.</b> У наших пользователей должна
+      быть возможность создать что-то своё, выразить себя,
       свои мысли и чувства.
     </p>
     <p>
-      <b>Многообразие.</b> Мы уважаем и приветствуем разные 
-      мнения и культуры. Блогикум — это место, объединяющее 
-      самых разных людей. Поделитесь своим уникальным взглядом на мир.  
+      <b>Многообразие.</b> Мы уважаем и приветствуем разные
+      мнения и культуры. Блогикум — это место, объединяющее
+      самых разных людей. Поделитесь своим уникальным взглядом на мир. 
     </p>
     <p>
       <b>Творчество.</b> Не важно, в какой области вы творите, 
@@ -27,7 +27,4 @@
       определяете вы и только вы.  
     </p>
   </div>
-{% endblock %} 
-    
- 
-
+{% endblock content %} 
