--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Публикации в категории {{ categoty }}{% endblock %}
 
+{% block title %}Публикации в категории {{ categoty }}{% endblock %}
 {% block content %}
   <div class="container py-5">
-    <h1>Публикации в категории {{ category }}</h1>   
+    <h1>
+      Публикации в категории {{ category }}
+    </h1>   
   </div>
-{% endblock %}
+{% endblock content %}
