--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Лента записей{% endblock%}
+
+{% block title %}Лента записей{% endblock %}
 {% block content %}
   <div class="container py-5">
     <h1>Лента записей</h1>                        
-    <!-- Перебираем в цикле все посты -->
     {% for post in posts reversed %}
     {% if not forloop.last %}
-    <hr>
+      <hr>
     {% endif %}
     <article>
       <ul>
@@ -23,7 +23,6 @@
           </a>
         </li>
       </ul>          
-      <!-- Первые 10 слов -->
       <p>
         {{ post.text|truncatewords:10 }}
       </p>
@@ -31,4 +30,4 @@
     </article>
     {% endfor %}   
   </div>
-{% endblock %}    
+{% endblock content %}    
