--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,6 +1,6 @@
-{% extends "base.html"  %}
-{% block title%}О проекте{% endblock%}
+{% extends "base.html" %}
 
+{% block title %}О проекте{% endblock %}
 {% block content %} 
   <div class="container py-5">                        
     <h1>О проекте</h1>
@@ -19,4 +19,4 @@
       основные черты наших пользователей.
     </p>           
   </div>
-{% endblock %}    
+{% endblock content %}
