Fix the errors after checking

--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -21,7 +21,7 @@
         </li>
       </ul>       
       <p>
-        {{ post.text }}
+        {{ post.text|linebreaks }}
       </p>
     </article>     
   </div>
