--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -21,7 +21,7 @@
       rel="icon" 
       type="image/png" 
       sizes="16x16" 
-      href="img/fav/favicon-16x16.png">
+      href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>
       {% block title %}{% endblock %}
