--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Публикации в категории {{ categoty }}{% endblock %}
+{% block title %}Публикации в категории {{ category }}{% endblock %}
 {% block content %}
   <div class="container py-5">
     <h1>
