--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,11 +3,9 @@
 {% block title %}Лента записей{% endblock %}
 {% block content %}
   <div class="container py-5">
-    <h1>Лента записей</h1>                        
+    <h1>Лента записей</h1> 
     {% for post in posts reversed %}
-    {% if not forloop.last %}
-      <hr>
-    {% endif %}
+    <hr>
     <article>
       <ul>
         <li>
@@ -24,10 +22,11 @@
         </li>
       </ul>          
       <p>
-        {{ post.text|truncatewords:10 }}
+        {{ post.text|truncatewords:10|linebreaks }}
       </p>
       <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
     </article>
+    
     {% endfor %}   
   </div>
 {% endblock content %}    
