--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link 
       rel="icon" 
-      href="{% static 'img/fav/favicon.ico" type="image' %}">
+      type="image"
+      href="{% static 'img/fav/favicon.ico' %}">
     <link 
       rel="apple-touch-icon" 
       sizes="180x180" 
